--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,8 +27,8 @@
             <TextBox x:Name="Eta" Width="226" HorizontalAlignment="Left" FontFamily="Segoe UI" TextAlignment="Left" Margin="0,0,0,10" />
             <Label Content="Criterio di ricerca"/>
             <ComboBox Name ="Ordina" Width="200" HorizontalAlignment="Left">
-                <ComboBoxItem Content="Ordina per UserName"></ComboBoxItem>
-                <ComboBoxItem Content="Ordina per Età"></ComboBoxItem>
+                <ComboBoxItem Content="per UserName"></ComboBoxItem>
+                <ComboBoxItem Content="per Età"></ComboBoxItem>
             </ComboBox>
             <Button x:Name="Cerca" Margin="10" Click="Cerca_Click" Content="Cerca" />
             <Label Content="UserName"/>
